[package]
name = "p2p_energy_auction"
version = "0.1.0"
edition = "2021"
default-run = "p2p_energy_auction" 

# ==========================================
# ==========================================

# 1. The Honest Network Anchor
[[bin]]
name = "p2p_energy_auction"
path = "src/main.rs"

# 2. The Original Attack Script
[[bin]]
name = "evil_node"
path = "src/bin/evil_node.rs" # FIX: Added /bin/



[dependencies]
curve25519-dalek = { version = "4.1", features = ["rand_core", "digest"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
libp2p = { version = "0.56.0", features = ["tokio", "gossipsub", "mdns", "noise", "yamux", "tcp", "macros", "kad", "identify"] }
tokio = { version = "1.50.0", features = ["full"] }
futures = "0.3.32"
